Update: Tweaked animations. Re-structured SCSS & Javascript

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                         </li>
                     </ul>
                     <div class="social-bar flex v-align">
-                        <i class="fab fa-facebook"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-pinterest"></i>
-                        <i class="fab fa-deviantart"></i>
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-pinterest"></i></a>
+                        <a href="#"><i class="fab fa-deviantart"></i></a>
                     </div>  
                     <button class="menu-btn flex v-align">
                         <span class="menu-btn__line"></span>
