Update: Refactored menu functionality to be more efficient

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
             <div class="footer__inner flex v-align h-align">
                 <p>
-                    &copy; Copyright Danny Pearson 2019
+                    &copy; Danny Pearson 2019
                 </p>
             </div>
         </footer>
